--- a/res/layout/playing_view.xml
+++ b/res/layout/playing_view.xml
@@ -1,5 +1,4 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/linearLayout1"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:orientation="vertical" >
@@ -20,7 +19,7 @@
             android:id="@+id/progress_container"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-	        android:padding="4dp">
+            android:padding="4dp" >
 
             <TextView
                 android:id="@+id/time"
@@ -46,9 +45,9 @@
 
         <GridLayout
             android:id="@+id/buttons"
-            android:layout_gravity="center"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" >
+            android:layout_height="wrap_content"
+            android:layout_gravity="center" >
 
             <ImageButton
                 android:id="@+id/button_back"
