--- a/res/layout/info.xml
+++ b/res/layout/info.xml
@@ -11,7 +11,7 @@
 		android:scrollbars="vertical"
 		android:maxLines="100"
 		android:autoLink="web|email"
-		android:layout_width="fill_parent" android:layout_height="fill_parent"
+		android:layout_width="fill_parent" android:layout_height="0dip"
 		android:layout_weight="1.0"
 	/>
 	<TextView style="@style/InfoTitle" android:id="@+id/low_text"/>
