--- a/res/layout/preferences.xml
+++ b/res/layout/preferences.xml
@@ -14,6 +14,12 @@
             android:summaryOn="Silence will trigger a song change"
             / -->
     <CheckBoxPreference
+            android:key="subtunes"
+            android:title="Cycle subtunes"
+            android:defaultValue="false"
+            android:summary="Switch subtunes on next/previous before full song switch"
+            />
+    <CheckBoxPreference
             android:key="speech"
             android:title="Speech"
             android:defaultValue="false"
