--- a/res/layout-land/info.xml
+++ b/res/layout-land/info.xml
@@ -1,28 +1,82 @@
-<LinearLayout android:orientation="horizontal" xmlns:android="http://schemas.android.com/apk/res/android" 
-	android:layout_width="fill_parent" android:layout_height="fill_parent" android:background="#000000" android:baselineAligned="false">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:background="#000000"
+    android:baselineAligned="false"
+    android:orientation="vertical" >
 
-	<LinearLayout android:orientation="vertical"
-			android:layout_weight="0.6"
-		android:layout_width="fill_parent" android:layout_height="fill_parent" android:background="#000000" >
-		<TextView android:text="@string/info" style="@style/InfoTitle" android:layout_marginRight="4dp" />
-		<TextView android:id="@+id/info_text" 
-			android:layout_width="fill_parent" android:layout_height="0dip"
-			android:layout_weight="1.0"
-		/>
-	</LinearLayout>
+    <TextView
+        android:id="@+id/title_text"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:background="#FF000080"
+        android:paddingLeft="4dp"
+        android:paddingTop="4dp"
+        android:singleLine="true"
+        android:textColor="#FFFFFFFF"
+        android:textSize="20dp"
+        android:textStyle="bold" />
 
+    <TextView
+        android:id="@+id/subtitle_text"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:background="#FF000080"
+        android:ellipsize="start"
+        android:paddingBottom="4dp"
+        android:paddingLeft="4dp"
+        android:singleLine="true"
+        android:textColor="#FFFFFFFF"
+        android:textSize="15dp" />
 
-	<LinearLayout android:orientation="vertical"
-		android:layout_weight="0.4"
-		android:layout_width="fill_parent" android:layout_height="fill_parent" android:background="#000000" >
-		<TextView style="@style/InfoTitle"
-				android:id="@+id/plinfo_text"
-			 	android:background="#4040A0"
-			 	android:gravity="right"
-			 	android:layout_marginRight="4dp"
-			 />		
-		<TextView android:layout_width="fill_parent" android:layout_height="0dip"
-		android:layout_weight="1.0" android:text=""/>
-		<include layout="@layout/controls" />
-	</LinearLayout>
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:background="#000000"
+        android:baselineAligned="false"
+        android:orientation="horizontal" >
+
+        <LinearLayout
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:layout_weight="0.6"
+            android:background="#000000"
+            android:orientation="vertical" >
+
+            <TextView
+                style="@style/InfoTitle"
+                android:layout_marginRight="4dp"
+                android:text="@string/info" />
+
+            <TextView
+                android:id="@+id/info_text"
+                android:layout_width="fill_parent"
+                android:layout_height="0dip"
+                android:layout_weight="1.0" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:layout_weight="0.4"
+            android:background="#000000"
+            android:orientation="vertical" >
+
+            <TextView
+                android:id="@+id/plinfo_text"
+                style="@style/InfoTitle"
+                android:layout_marginRight="4dp"
+                android:background="#4040A0"
+                android:gravity="right" />
+
+            <TextView
+                android:layout_width="fill_parent"
+                android:layout_height="0dip"
+                android:layout_weight="1.0"
+                android:text="" />
+
+            <include layout="@layout/controls" />
+        </LinearLayout>
+    </LinearLayout>
+
 </LinearLayout>
