Changed layouts to work better in landscape

--- a/res/layout/info.xml
+++ b/res/layout/info.xml
@@ -11,6 +11,7 @@
 		android:layout_height="wrap_content"
 		android:paddingLeft="4dp"
 		android:paddingTop="4dp"
+		android:ellipsize="marquee"
 		android:singleLine="true"
 		android:textColor="#FFFFFFFF"
 		android:background="#FF000080"
@@ -23,7 +24,7 @@
 		android:paddingBottom="4dp"
 		android:layout_width="fill_parent"
 		android:layout_height="wrap_content"
-		android:ellipsize="start"
+		android:ellipsize="marquee"
 		android:singleLine="true"
 		android:textColor="#FFFFFFFF"
 		android:background="#FF000080"
