--- a/res/layout-land/info.xml
+++ b/res/layout-land/info.xml
@@ -5,78 +5,68 @@
     android:baselineAligned="false"
     android:orientation="vertical" >
 
-    <TextView
-        android:id="@+id/title_text"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:background="#FF000080"
-        android:paddingLeft="4dp"
-        android:paddingTop="4dp"
-        android:singleLine="true"
-        android:textColor="#FFFFFFFF"
-        android:textSize="20dp"
-        android:textStyle="bold" />
-
-    <TextView
-        android:id="@+id/subtitle_text"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:background="#FF000080"
-        android:ellipsize="start"
-        android:paddingBottom="4dp"
-        android:paddingLeft="4dp"
-        android:singleLine="true"
-        android:textColor="#FFFFFFFF"
-        android:textSize="15dp" />
-
     <LinearLayout
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
+        android:layout_height="wrap_content"
         android:background="#000000"
         android:baselineAligned="false"
         android:orientation="horizontal" >
 
-        <LinearLayout
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:layout_weight="0.6"
-            android:background="#000000"
-            android:orientation="vertical" >
+        <TextView
+            android:id="@+id/title_text"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:background="#FF000080"
+            android:ellipsize="marquee"
+            android:paddingLeft="4dp"
+            android:paddingBottom="4dp"
+            android:singleLine="true"
+            android:textColor="#FFFFFFFF"
+            android:textSize="20dp"
+            android:textStyle="bold"
+            android:text="Golden Axe" 
+            />
 
-            <TextView
-                style="@style/InfoTitle"
-                android:layout_marginRight="4dp"
-                android:text="@string/info" />
+        <TextView
+            android:id="@+id/subtitle_text"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:background="#FF000080"
+            android:ellipsize="marquee"
+            android:paddingBottom="4dp"
+            android:paddingRight="4dp"
+            android:gravity="right"            
+            android:singleLine="true"
+            android:textColor="#FFFFFFFF"
+            android:textSize="20dp"
+            android:text="Jeroen Tel / Manicas of Noise"
+             />
+    </LinearLayout>
 
-            <TextView
-                android:id="@+id/info_text"
-                android:layout_width="fill_parent"
-                android:layout_height="0dip"
-                android:layout_weight="1.0" />
-        </LinearLayout>
+    <TextView
+        android:id="@+id/plinfo_text"
+        style="@style/InfoTitle"
+        android:background="#4040A0"
+        android:gravity="right" />
 
-        <LinearLayout
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:layout_weight="0.4"
-            android:background="#000000"
-            android:orientation="vertical" >
+    <TextView
+        android:id="@+id/info_text"
+        android:layout_width="fill_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1.0"
+        android:autoLink="web|email"
+        android:maxLines="100"
+        android:scrollbars="vertical" />
 
-            <TextView
-                android:id="@+id/plinfo_text"
-                style="@style/InfoTitle"
-                android:layout_marginRight="4dp"
-                android:background="#4040A0"
-                android:gravity="right" />
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:baselineAligned="false"
+        android:orientation="vertical" >
 
-            <TextView
-                android:layout_width="fill_parent"
-                android:layout_height="0dip"
-                android:layout_weight="1.0"
-                android:text="" />
-
-            <include layout="@layout/controls" />
-        </LinearLayout>
+        <include layout="@layout/controls" />
     </LinearLayout>
 
 </LinearLayout>
