--- a/res/layout-land/controls.xml
+++ b/res/layout-land/controls.xml
@@ -9,7 +9,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
         android:orientation="horizontal" >
-
+
         <com.ssb.droidsound.FontTextView
             android:id="@+id/seconds_text"
             style="@style/LEDText"
@@ -20,7 +20,7 @@
             font="led"
             android:text="00:00"
             android:textSize="26dp"
-            tools:ignore="HardcodedText" />
+            tools:ignore="HardcodedText,SpUsage" />
 
         <SeekBar
             android:id="@+id/song_seek"
@@ -28,7 +28,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1.0"
             android:progressDrawable="@drawable/seekbar" />
-
+
         <com.ssb.droidsound.FontTextView
             android:id="@+id/total_text"
             style="@style/LEDText"
@@ -39,7 +39,8 @@
             font="led"
             android:text="00:00"
             android:textSize="26dp"
-            tools:ignore="HardcodedText" />
+            tools:ignore="HardcodedText,SpUsage" />
+
     </LinearLayout>
 
     <LinearLayout
@@ -51,44 +52,47 @@
             android:id="@+id/back_button"
             style="@style/Button"
             android:background="@drawable/back_button"
-            android:scaleType="fitCenter" />
+            android:scaleType="fitCenter"
+            android:contentDescription="@string/prev"/>
 
         <ImageButton
             android:id="@+id/play_button"
             style="@style/Button"
             android:background="@drawable/play_button"
-            android:scaleType="fitCenter" />
+            android:scaleType="fitCenter"
+            android:contentDescription="@string/play"/>
 
         <ImageButton
             android:id="@+id/stop_button"
             style="@style/Button"
             android:background="@drawable/stop_button"
-            android:contentDescription="@string/stop"
-            android:scaleType="fitCenter" />
+            android:scaleType="fitCenter"
+            android:contentDescription="@string/stop"/>
 
         <ImageButton
             android:id="@+id/fwd_button"
             style="@style/Button"
             android:background="@drawable/fwd_button"
-            android:scaleType="fitCenter" />
-
+            android:scaleType="fitCenter"
+            android:contentDescription="@string/next"/>
+
         <com.ssb.droidsound.FontTextView
             android:id="@+id/songs_text"
             style="@style/LEDText"
             android:layout_gravity="center_vertical"
+            android:layout_marginLeft="6dp"
             font="led"
-             android:layout_marginLeft="6dp"
             android:text="01/01"
             android:textColor="#6060ff"
             android:textSize="25dp"
-            tools:ignore="HardcodedText" />
+            tools:ignore="HardcodedText,SpUsage" />
 
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="2"
              />
-
+
         <com.ssb.droidsound.FontTextView
             android:id="@+id/shuffle_text"
             style="@style/LEDText"
@@ -100,8 +104,9 @@
             android:gravity="center"
             android:text="SEQ"
             android:textColor="#80ffc0"
-            android:textSize="25dp" />
-
+            android:textSize="25dp"
+            tools:ignore="HardcodedText,SpUsage" />
+
         <com.ssb.droidsound.FontTextView
             android:id="@+id/repeat_text"
             style="@style/LEDText"
@@ -112,7 +117,8 @@
             android:gravity="center"
             android:text="CONT"
             android:textColor="#80ffc0"
-            android:textSize="25dp" />
+            android:textSize="25dp"
+            tools:ignore="HardcodedText,SpUsage" />
 
         <com.ssb.droidsound.FontTextView
             android:id="@+id/plus_text"
@@ -126,7 +132,8 @@
             android:paddingRight="16dp"
             android:text="+"
             android:textColor="#ff6060"
-            android:textSize="40dp" />
+            android:textSize="40dp"
+            tools:ignore="HardcodedText,SpUsage" />
         <!--
 		<com.ssb.droidsound.FontTextView android:id="@+id/wake_text" style="@style/LEDText" font="led"
 			android:layout_width="wrap_content" android:layout_height="wrap_content"
