--- a/res/layout/controls.xml
+++ b/res/layout/controls.xml
@@ -20,7 +20,7 @@
             font="led"
             android:text="00:00"
             android:textSize="26dp"
-            tools:ignore="HardcodedText" />
+            tools:ignore="HardcodedText,SpUsage" />
 
         <SeekBar
             android:id="@+id/song_seek"
@@ -39,7 +39,7 @@
             font="led"
             android:text="00:00"
             android:textSize="26dp"
-            tools:ignore="HardcodedText" />
+            tools:ignore="HardcodedText,SpUsage" />
 
     </LinearLayout>
 
@@ -57,7 +57,7 @@
             android:text="01/01"
             android:textColor="#6060ff"
             android:textSize="25dp"
-            tools:ignore="HardcodedText" />
+            tools:ignore="HardcodedText,SpUsage" />
 
         <com.ssb.droidsound.FontTextView
             android:id="@+id/shuffle_text"
@@ -70,7 +70,8 @@
             android:gravity="center"
             android:text="SEQ"
             android:textColor="#80ffc0"
-            android:textSize="25dp" />
+            android:textSize="25dp"
+            tools:ignore="HardcodedText,SpUsage" />
 
         <com.ssb.droidsound.FontTextView
             android:id="@+id/repeat_text"
@@ -82,7 +83,8 @@
             android:gravity="center"
             android:text="CONT"
             android:textColor="#80ffc0"
-            android:textSize="25dp" />
+            android:textSize="25dp"
+            tools:ignore="HardcodedText,SpUsage" />
 
         <com.ssb.droidsound.FontTextView
             android:id="@+id/plus_text"
@@ -96,7 +98,9 @@
             android:paddingRight="10dp"
             android:text="+"
             android:textColor="#ff6060"
-            android:textSize="40dp" />
+            android:textSize="40dp"
+            tools:ignore="HardcodedText,SpUsage" />
+
         <!--
 		<com.ssb.droidsound.FontTextView android:id="@+id/wake_text" style="@style/LEDText" font="led"
 			android:layout_width="wrap_content" android:layout_height="wrap_content"
@@ -118,25 +122,30 @@
             android:id="@+id/back_button"
             style="@style/Button"
             android:background="@drawable/back_button"
-            android:scaleType="fitCenter" />
+            android:scaleType="fitCenter"
+            android:contentDescription="@string/prev"/>
 
         <ImageButton
             android:id="@+id/play_button"
             style="@style/Button"
             android:background="@drawable/play_button"
-            android:scaleType="fitCenter" />
-
+            android:scaleType="fitCenter"
+            android:contentDescription="@string/play"/>
+        
         <ImageButton
             android:id="@+id/stop_button"
             style="@style/Button"
             android:background="@drawable/stop_button"
-            android:scaleType="fitCenter" />
+            android:scaleType="fitCenter"
+			android:contentDescription="@string/stop"/>
+            
 
         <ImageButton
             android:id="@+id/fwd_button"
             style="@style/Button"
             android:background="@drawable/fwd_button"
-            android:scaleType="fitCenter" />
+            android:scaleType="fitCenter"
+            android:contentDescription="@string/next"/>
     </LinearLayout>
 
 </LinearLayout>
