--- a/assets/gui.css
+++ b/assets/gui.css
@@ -1,73 +1,153 @@
 
-header {
+
+root {
+	background-color : #000000;	
+	text-color : #ffffff;
+}
+
+flipper {
+	hilight-color : #ffffff;	
+	footer-color : #33B5E5;
+}
+
+browser-header {
 	color: #ffffff;
-	background-color: #000080;
-	padding-left: 2pt;	
+	background: linear-gradient(top, #2F2727, #1a82f7);
+	padding-left: 2dp;	
 }
 
-header.title {
+browser-header.title {
 	font-weight:bold;
-	font-size:16pt;
-	padding-top: 1pt;
+	font-size:"14sp";
 }
 
-header.subtitle {
-	font-size:12pt;
-	padding-bottom: 1pt;
+browser-header.subtitle {
+	font-size: "8sp";
+}
+ 
+search-header {
+	color: #ffffff;
+	background: linear-gradient(top, #27272f, #f7271a);
+	padding-left: 2dp;	
 }
 
-/* List items. Format: item.<type>.<FILENAME> or item.<type>.<flags> */
+search-header.title {
+	font-weight:bold;
+	font-size:14sp;
+}
 
-/*
+search-header.subtitle {
+	font-size:8sp;
+}
 
-		tv0.setTextSize(0);
-		tv0.setBackgroundColor(0);
-		tv0.setBackground(background);
-		tv0.setEllipsize(where);
-		tv0.setHighlightColor(color);
-		tv0.setRotation(0);
-		tv0.setSingleLine(false);
-		tv0.setTypeface(tf);
-		tv0.set
-*/
+control-separator {
+	background-color: #33B5E5;
+	height: 2dp;
+}
+ 
+controls {
+	font : "fonts/led.ttf";
+	color : #8080c0;
+	font-size : 14dp;
+}
+
+controls.seconds {
+}
+
+controls.total {
+}
+
+controls.subtunes {
+}
+
+controls.shuffle {
+	color : #80c0c0;
+}
+
+controls.repeat {
+	color : #80c0c0;
+}
+
+
+controls.plus {
+	color : #ff6060;
+	font-size: 20dp;
+}
+
+controls.forward {
+	background : (img/mg_forward.png, img/mg_forward_h.png);
+}
+
+controls.back {
+	background : (img/mg_back.png, img/mg_back_h.png);
+}
+
+controls.play {
+	background : (img/mg_forward.png, img/mg_forward_h.png);
+}
+
+controls.stop {
+	background : (img/mg_stop.png, img/mg_stop_h.png);
+}
+
+controls.pause {
+	background : (img/mg_pause.png, img/mg_pause_h.png);
+}
+
+controls.seekbar {
+	progress-background: linear-gradient(left, #404060, #404040);
+}
+
+
+/* PLAYLIST ITEM TEMPLATES */
 
 item {
-	bgColor: #8888cc;
-	
-	color : #FFFFFF;
-	subColor: #aaccff;
-	sideColor: #cccccc;
+	color : #ffffff;
 
-	textSize: "20dp";
-	subtextSize : "12dp";
-	sidetextSize : "10dp";
+	sub-color: #aaaaaa;
+	side-color: #ccccff;
+	
+	font : "bold";
+	
+	font-size: "24sp";
+	sub-font-size : "14sp";
+	side-font-size : "10sp";
+	
+	/*divider: #cccccc; */
 	
 }
 
 item.folder {
-	color : #ffff00;
+	font-size: "20sp";
+	color : #ffff80;
 	icon : "icons/gflat_folder.png";
 }
 
 item.network {
+	font-size: "20sp";
+	color : #ffff80;
 	icon : "icons/gflat_net_folder.png";
 }
 
 item.archive {
+	font-size: "20sp";
 	color : #ffff80;
 	icon : "icons/gflat_package.png";
 }
 
 item.media {
+	font-size: "20sp";
+	color : #ffff80;
 	icon : "icons/gflat_mus_folder.png";
 }
 
 item.csdb {
-	icon : "icons/gflat_bag.png";
+	font-size: "20sp";
+	color : #ffff80;
+icon : "icons/gflat_bag.png";
 }
 
 item.playlist {
-	color : #ffff80;
 	icon : "icons/gflat_note3.png";
 }
 
@@ -80,5 +160,6 @@ item:online {
 }
 
 item:hilight {
-	color : #ffa000;
+	color : #ffff88;
+	background: linear-gradient(left, #000000, #888888);
 }
