--- a/res/layout/controls.xml
+++ b/res/layout/controls.xml
@@ -2,7 +2,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:orientation="vertical" >
+    android:orientation="vertical"
+    android:id="@+id/controls" >
 
     <LinearLayout
         android:layout_width="fill_parent"
