--- a/assets/gui.css
+++ b/assets/gui.css
@@ -12,7 +12,7 @@ flipper {
 
 browser-header {
 	color: #ffffff;
-	background: linear-gradient(top, #2F2727, #1a82f7);
+	background: -webkit-linear-gradient(top, #2F2727, #1a82f7);
 	padding-left: 2dp;	
 }
 
@@ -27,7 +27,7 @@ browser-header.subtitle {
  
 search-header {
 	color: #ffffff;
-	background: linear-gradient(top, #27272f, #f7271a);
+	background: -webkit-linear-gradient(top, #27272f, #f7271a);
 	padding-left: 2dp;	
 }
 
@@ -163,3 +163,15 @@ item:hilight {
 	color : #ffff88;
 	background: linear-gradient(left, #000000, #888888);
 }
+
+
+/*** WEB CSS FOR TEMPLATES ***/
+
+.song-header {
+	color: #ffffff;
+	background: -webkit-linear-gradient(top, #2F2727, #1a8200);
+	padding-left: 2dp;	
+	height: 4.3em; 
+}
+
+
