--- a/assets/templates/def.html
+++ b/assets/templates/def.html
@@ -1,14 +1,14 @@
-<html><head><style type="text/css">
+<html><head>
+
+
+<style type="text/css">
+
+${themeCSS}
+
 body {
 	color: #ffffff; background-color: #000000; margin:0; padding:0;
 }
 
-.songhead {
-	color: #ffffff;
-	background: -webkit-linear-gradient(top, #2F2757, #1a82f7);
-	height: 4.3em; 
-	
-}
 
 .title {
 	text-overflow: ellipsis; white-space: nowrap; overflow: hidden;
@@ -40,7 +40,7 @@ body {
 </style>
 
 </head><body>
-<div class="songhead">
+<div class="song-header">
 <div class="title">${title}</div>
 <div class="subtitle">${composer}</div>
 </div>
