--- a/res/layout/playlist.xml
+++ b/res/layout/playlist.xml
@@ -42,12 +42,8 @@
 		android:id="@+id/play_list"
 		android:layout_width="fill_parent"
 		android:layout_height="fill_parent"
-		archiveColor="#ffffffa0"
-		dirColor="#ffffffa0"
-		itemColor="#ffffffff"
-		subitemColor="#ffa0a0ff"
-		android:fastScrollEnabled="true" />
-		<!-- android:background="#ff000000" -->
-		
+		android:fastScrollEnabled="true"
+	 />
+	
 		
 </LinearLayout>
