--- a/res/layout/playlist.xml
+++ b/res/layout/playlist.xml
@@ -43,6 +43,7 @@
 		android:layout_width="fill_parent"
 		android:layout_height="fill_parent"
 		android:fastScrollEnabled="true"
+		android:cacheColorHint="#ffffffff"
 	 />
 	
 		
